# sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  SESSION_LOG.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/raw/: diabetes_130.csv.dvc
docs/: competitive_landscape.md  phase3_fairness_spec.md  phase3_oof_robustness_spec.md
docs/specs/: baseline_metrics_spec.md  cohort_builder_spec.md  week2_leakage_audit_spec.md
models/calibration/: calibrator.joblib  calibrator_manifest.json
models/clinical/: operating_points.json
models/fairness/: age_oof_robustness.json  pairwise_disparities.json  subgroup_metrics.json
reports/: baseline_results.md  calibration_results.md  clinical_utility_results.md  cohort_summary.md  fairness_audit.md  fairness_prereg.md  leakage_audit.md  leakage_audit_features.md  lgbm_baseline_results.md  lgbm_tuned_results.md  model_registry.md
src/sentinel/: __init__.py  config.py
src/sentinel/calibration/: __init__.py  calibration_splits.py  fit_calibrators.py
src/sentinel/clinical_utility/: __init__.py  calibrated.py  dca.py  evaluate.py  ranking.py
src/sentinel/data/: cohort.py  (+2 more)
tests/: test_calibration_splits.py  test_calibrator_fit.py  test_clinical_utility.py  test_cohort.py  test_dca.py  test_fairness_age_oof.py  test_fairness_audit.py  test_fairness_bootstrap.py  test_fairness_metrics.py  test_fairness_subgroups.py  test_features.py  test_leakage.py  test_lgbm_baseline.py  test_lgbm_tuned.py  test_metrics.py  test_register.py  test_smoke.py
(+12 files in other folders)
