[project]
name = "sentinel"
version = "0.1.0"
description = "Explainable, fairness-audited, calibrated clinical readmission-risk decision support."
requires-python = ">=3.10,<3.11"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/sentinel"]
